Update testimonials, mobile logo enhancement, remove team section, add Drishti avatar

--- a/src/Views/Multi/Index1.cshtml
+++ b/src/Views/Multi/Index1.cshtml
@@ -728,13 +728,13 @@
                         <div class="tes1-single-items mt-30 space-right">
                             <div class="">
                                 <div class="image">
-                                    <img src="~/img/testimonial/tes1-smoll-image1.png" alt="">
+                                    <img src="~/img/testimonial/drishti-avatar.png" alt="">
                                 </div>
                             </div>
                             <div class="content">
                                 <div class="author-info">
-                                    <a href="#">Sarah M</a>
-                                    <span>E-commerce Owner</span>
+                                    <a href="#">Drishti Nimawat</a>
+                                    <span>Drishti Nimawat Designs</span>
                                 </div>
                                 <p>Profit Factor transformed our online presence. We saw a 300% increase in website months!</p>
                             </div>
@@ -751,8 +751,8 @@
                             </div>
                             <div class="content">
                                 <div class="author-info">
-                                    <a href="#">John Doe</a>
-                                    <span>Marketing Manager</span>
+                                    <a href="#">Nitin Jain</a>
+                                    <span>Gadget Worldz</span>
                                 </div>
                                 <p>team is proactive, professional, results-driven. Highly recommend their services!</p>
                             </div>
@@ -769,8 +769,8 @@
                             </div>
                             <div class="content">
                                 <div class="author-info">
-                                    <a href="#">Alex Hales</a>
-                                    <span>E-commerce Owner</span>
+                                    <a href="#">Ayan Chakrobhorty</a>
+                                    <span>House Of AYN</span>
                                 </div>
                                 <p>Thanks to Profit Factor, our revenue doubled last year. They're truly the best in the industry.</p>
                             </div>
