--- a/src/Views/Pages/About.cshtml
+++ b/src/Views/Pages/About.cshtml
@@ -362,11 +362,11 @@
                                 <div class="tes11-dv-top"></div>
                                 <div class="author-area">
                                     <div class="author-thumb">
-                                        <img src="~/img/testimonial/team2-image1.png" alt="">
+                                        <img src="~/img/testimonial/drishti-avatar.png" alt="">
                                     </div>
                                     <div class="author-text">
-                                        <a href="#">Sarah Mitchell</a>
-                                        <p>Marketing Manager</p>
+                                        <a href="#">Drishti Nimawat</a>
+                                        <p>Drishti Nimawat Designs</p>
                                     </div>
                                 </div>
                             </div>
@@ -379,8 +379,8 @@
                                         <img src="~/img/testimonial/team2-image1.png" alt="">
                                     </div>
                                     <div class="author-text">
-                                        <a href="#">Sarah Mitchell</a>
-                                        <p>Marketing Manager</p>
+                                        <a href="#">Nitin Jain</a>
+                                        <p>Gadget Worldz</p>
                                     </div>
                                 </div>
                             </div>
@@ -393,8 +393,8 @@
                                         <img src="~/img/testimonial/team2-image2.png" alt="">
                                     </div>
                                     <div class="author-text">
-                                        <a href="#">Sarah Mitchell</a>
-                                        <p>Marketing Manager</p>
+                                        <a href="#">Ayan Chakrobhorty</a>
+                                        <p>House Of AYN</p>
                                     </div>
                                 </div>
                             </div>
@@ -404,11 +404,11 @@
                                 <div class="tes11-dv-top"></div>
                                 <div class="author-area">
                                     <div class="author-thumb">
-                                        <img src="~/img/testimonial/team2-image2.png" alt="">
+                                        <img src="~/img/testimonial/drishti-avatar.png" alt="">
                                     </div>
                                     <div class="author-text">
-                                        <a href="#">Sarah Mitchell</a>
-                                        <p>Marketing Manager</p>
+                                        <a href="#">Drishti Nimawat</a>
+                                        <p>Drishti Nimawat Designs</p>
                                     </div>
                                 </div>
                             </div>
@@ -421,149 +421,6 @@
     </div>
 
     <!--===== TESTIMONIAL AREA END =====-->
-    <!--===== TEAM AREA START =====-->
-
-    <div class="team2 sp sec-bg2">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="heading2">
-                        <span class="sub-title" data-aos="zoom-in-left" data-aos-duration="900"><img src="~/img/icons/span3.svg" alt="">OUR TEAM MEMBER </span>
-                        <h2 class="text-anime-style-3">Meet Our Expert Team Member</h2>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="button text-end sm:text-start md:text-start md:mt-30 sm:mt-30" data-aos="fade-left" data-aos-duration="1000">
-                        <a class="theme-btn3" href=@Url.Action("About", "Pages")>View All Services <span class="arrow1"><i class="fa-solid fa-arrow-right"></i></span><span class="arrow2"><i class="fa-solid fa-arrow-right"></i></span></a>
-                    </div>
-                </div>
-            </div>
-            <div class="row mt-30">
-                <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-duration="900" data-aos-delay="200">
-                    <div class="team2-item mt-30">
-                        <div class="team-image-area">
-                            <div class="image">
-                                <img src="~/img/team/team2-image1.png" alt="">
-                            </div>
-                            <div class="shape round-circle">
-                                <img src="~/img/shapes/team2-items-shape.png" alt="">
-                            </div>
-                            <div class="social-icons">
-                                <ul>
-                                    <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="team-content-area">
-                            <div class="heading2">
-                                <h4><a href="#">Rodger Struck</a></h4>
-                                <p class="mt-2">Social Media Specialist</p>
-                            </div>
-                            <div class="plue-icon">
-                                <a href="#"><i class="fa-solid fa-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-duration="900" data-aos-delay="300">
-                    <div class="team2-item mt-30">
-                        <div class="team-image-area">
-                            <div class="image">
-                                <img src="~/img/team/team2-image2.png" alt="">
-                            </div>
-                            <div class="shape round-circle">
-                                <img src="~/img/shapes/team2-items-shape.png" alt="">
-                            </div>
-                            <div class="social-icons">
-                                <ul>
-                                    <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="team-content-area">
-                            <div class="heading2">
-                                <h4><a href="#">Alex Buckmaster</a></h4>
-                                <p class="mt-2">Marketing Officer</p>
-                            </div>
-                            <div class="plue-icon">
-                                <a href="#"><i class="fa-solid fa-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-duration="900" data-aos-delay="400">
-                    <div class="team2-item mt-30">
-                        <div class="team-image-area">
-                            <div class="image">
-                                <img src="~/img/team/team2-image3.png" alt="">
-                            </div>
-                            <div class="shape round-circle">
-                                <img src="~/img/shapes/team2-items-shape.png" alt="">
-                            </div>
-                            <div class="social-icons">
-                                <ul>
-                                    <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="team-content-area">
-                            <div class="heading2">
-                                <h4><a href="#">Sarah Joe</a></h4>
-                                <p class="mt-2">Marketer</p>
-                            </div>
-                            <div class="plue-icon">
-                                <a href="#"><i class="fa-solid fa-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-3 col-md-6" data-aos="fade-up" data-aos-duration="900" data-aos-delay="500">
-                    <div class="team2-item mt-30">
-                        <div class="team-image-area">
-                            <div class="image">
-                                <img src="~/img/team/team2-image4.png" alt="">
-                            </div>
-                            <div class="shape round-circle">
-                                <img src="~/img/shapes/team2-items-shape.png" alt="">
-                            </div>
-                            <div class="social-icons">
-                                <ul>
-                                    <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
-                                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="team-content-area">
-                            <div class="heading2">
-                                <h4><a href="#">Chris Glasser</a></h4>
-                                <p class="mt-2">Marketer</p>
-                            </div>
-                            <div class="plue-icon">
-                                <a href="#"><i class="fa-solid fa-plus"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>
-
-    <!--===== TEAM AREA END =====-->
     <!--===== CONTACT AREA START =====-->
 
     <div class="contact2 sp">
